--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,11 +2,11 @@
 name = "audio2score"
 version = "0.1.0"
 description = "Audio → MIDI → MusicXML → PDF pipeline using Demucs ensemble + BasicPitch."
-readme = "README.org"
+# readme = "README.org"
 requires-python = ">=3.10"
 authors = [
   { name = "YAMASHITA, Takao" }
-]n
+]
 license = { text = "MIT" }
 
 # -------------------------------------------
